--- a/playbooks/roles/ruby/vars/main.yml
+++ b/playbooks/roles/ruby/vars/main.yml
@@ -7,14 +7,7 @@ ruby: {
     command: "curl -s 'https://www.ruby-lang.org/en/downloads/' | grep 'The current stable version is' | cut -d' ' -f6 | sed 's/\\.$//'",
     pattern: '^\d+\.\d+\.\d+$'
   },
-  # Gems to installs
-  gems: {
-    # name:         [ commands to test the gem ]
-    bundler:        [ 'bundle  --version', 'bundle  --help' ],
-    pry:            [ 'pry     --version', 'pry     --help' ],
-    # test-kitchen:   [ 'kitchen --version', 'kitchen --help' ],
-    # kitchen-docker: []
-  },
+  gems: [ 'bundler', 'pry' ],
   rvm: {
     url:  'https://get.rvm.io',
     home: /usr/local/rvm
