MySQL role and Docker data volume container

--- a/docker/ansible/Dockerfile
+++ b/docker/ansible/Dockerfile
@@ -1,5 +1,5 @@
 # https://registry.hub.docker.com/u/evgenyg/ansible/
 
 FROM ubuntu:14.04
-ADD  . /docker
-RUN    /docker/install-ansible.sh
+ADD  docker /docker
+RUN         /docker/ansible/install-ansible.sh
