--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -1,7 +1,9 @@
 # https://registry.hub.docker.com/u/evgenyg/mysql/
 
 FROM   evgenyg/ansible:1.7.2
-ADD    playbooks /playbooks
 EXPOSE 3306
+VOLUME /var/lib/mysql
+ADD    playbooks /playbooks
+ADD    docker/mysql/mysql-start.sh /opt/mysql-start.sh
 RUN    ansible-playbook /playbooks/mysql-ubuntu.yml -c local -e "start_service=false"
-CMD    service mysql start && tail -f /var/log/mysql/*.log
+CMD    [ "/bin/bash", "/opt/mysql-start.sh" ]
