Ruby Dockerfile - CMD used instead of ENTRYPOINT

--- a/docker/ruby/Dockerfile
+++ b/docker/ruby/Dockerfile
@@ -1,6 +1,6 @@
 # https://registry.hub.docker.com/u/evgenyg/ruby/
 
-FROM       evgenyg/ansible:1.7.2
-ADD        playbooks /playbooks
-RUN        ansible-playbook /playbooks/ruby-ubuntu.yml -c local
-ENTRYPOINT [ "/bin/bash", "-c", "source /.bash_profile; /bin/bash" ]
+FROM evgenyg/ansible:1.7.2
+ADD  playbooks /playbooks
+RUN  ansible-playbook /playbooks/ruby-ubuntu.yml -c local
+CMD  [ "/bin/bash", "-c", "source /.bash_profile; /bin/bash" ]
