Ruby Docker - gems are added to PATH

--- a/docker/ruby/Dockerfile
+++ b/docker/ruby/Dockerfile
@@ -3,4 +3,4 @@
 FROM evgenyg/ansible:1.7.2
 ADD  playbooks /playbooks
 RUN  ansible-playbook /playbooks/ruby-ubuntu.yml -c local
-ENV  PATH /usr/local/rvm/rubies/default/bin:$PATH
+ENV  PATH /usr/local/rvm/rubies/default/bin:/usr/local/rvm/gems/default/bin:$PATH
