--- a/playbooks/roles/ansible/tasks/main.yml
+++ b/playbooks/roles/ansible/tasks/main.yml
@@ -4,7 +4,7 @@
     ansible_version: "{{ ansible.version | calculate( ansible ) }}"
 - debug: var=ansible_version
 
-- name: Downloading and installing Python packages
+- name: Installing Python packages
   apt:  name={{item}} state=latest force=yes
   with_items:
     - python-pip
