--- a/playbooks/roles/java/tasks/main.yml
+++ b/playbooks/roles/java/tasks/main.yml
@@ -5,7 +5,7 @@
   apt_repository: repo=ppa:webupd8team/java state=present update-cache=yes
 - shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
 
-- name: Downloading and installing Java
+- name: Installing Java
   apt:  name=oracle-java7-installer state=latest force=yes
 
 - name: Adding JAVA_HOME
