--- a/playbooks/roles/jenkins/tasks/main.yml
+++ b/playbooks/roles/jenkins/tasks/main.yml
@@ -7,7 +7,7 @@
 - name:           Adding Jenkins repository
   apt_repository: repo='deb http://pkg.jenkins-ci.org/debian binary/' update_cache=yes
 
-- name: Downloading and installing Jenkins
+- name: Installing Jenkins
   apt:  name=jenkins state=latest force=yes
 
 - name: Writing Jenkins files
