--- a/playbooks/roles/docker/tasks/auto-boot.yml
+++ b/playbooks/roles/docker/tasks/auto-boot.yml
@@ -13,17 +13,19 @@
 # [ port1, port2, port3 ] => "-p port1:port1 -p port2:port1 -p port3:port3"
 - set_fact: docker_ports="{{ ports | transform( "-p {0}:{0}" ) | join( ' ' ) }}"
   when:     ports is defined
-- debug:    var=docker_ports
 
 - name:     Setting Docker env file
   set_fact: docker_env_file=""
-- set_fact: docker_env_file="--env-file '{{ env }}'"
-  when:     env is defined
-- debug:    var=docker_env_file
+- set_fact: docker_env_file="--env-file '{{ env_file }}'"
+  when:     env_file is defined
 
 - name:     Building Docker command
-  set_fact: docker_command="docker run {{ docker_ports }} {{ docker_env_file }} {{ image }}"
+  set_fact: docker_command="docker run {{ docker_ports }} {{ docker_env_file }} --name '{{ app_name }}' '{{ image }}'"
 - debug:    var=docker_command
+
+- name:    Pulling Docker image
+  command: docker pull '{{ image }}'
+  when:    pull_image | default( true )
 
 - name: Generating upstart template
   template:
