Docker role - container is killed and removed before starting

--- a/playbooks/roles/docker/tasks/auto-boot.yml
+++ b/playbooks/roles/docker/tasks/auto-boot.yml
@@ -17,7 +17,7 @@
 - name: Creating Docker env file
   lineinfile:
     # http://docs.ansible.com/faq.html#how-do-i-access-a-variable-name-programmatically
-    line:   "{{ item }}={{ hostvars[ inventory_hostname ][ item ] }}"
+    line:   "{{ item }}={{ hostvars[ inventory_hostname ][ item ] | mandatory }}"
     create: yes
     dest:   "/opt/{{ app_name }}.env"
   with_items: env_vars
@@ -34,8 +34,8 @@
   when:     env_file is defined
 
 - name:     Building Docker command
-  set_fact: docker_command="docker run {{ docker_ports }} {{ docker_env_file }} --name '{{ app_name }}' '{{ image }}'"
-- debug:    var=docker_command
+  set_fact: docker_commands="docker kill '{{ app_name }}'; docker rm '{{ app_name }}'; docker run {{ docker_ports }} {{ docker_env_file }} --name '{{ app_name }}' '{{ image }}'"
+- debug:    var=docker_commands
 
 - name:    Pulling Docker image
   command: docker pull '{{ image }}'
