--- a/playbooks/roles/asgard/vars/main.yml
+++ b/playbooks/roles/asgard/vars/main.yml
@@ -5,17 +5,12 @@ asgard: {
   user_home:     "{{ ubuntu.home_dir }}/asgard",
   home:          "{{ ubuntu.home_dir }}/asgard/.asgard",
   jar:           "{{ ubuntu.home_dir }}/asgard/.asgard/asgard-standalone.jar",
-  log:           "{{ ubuntu.log_dir }}/asgard/asgard.log",
+  log:           "{{ ubuntu.log_dir }}/asgard.log",
   pid:           "{{ ubuntu.pid_dir }}/asgard.pid",
   java:          "{{ java.home }}/bin/java",
   java_args:     -Xms256m -Xmx768m,
 
+  # Default jar location, if executed outside Bakery
   # https://github.com/Netflix/asgard/releases
-  # https://netflixoss.ci.cloudbees.com/job/asgard-master/
   jar_url:       'https://netflixoss.ci.cloudbees.com/job/asgard-master/lastSuccessfulBuild/artifact/asgard-standalone.jar',
-
-  # AWS credentials: AWS_ACCOUNT_ID, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY
-  # If true  - loaded from "vars/aws.yml"
-  # If false - need to be provided as Ansible extra variables
-  load_aws_credentials: false
 }
