--- a/playbooks/roles/vagrant/vars/main.yml
+++ b/playbooks/roles/vagrant/vars/main.yml
@@ -1,7 +1,6 @@
 ---
 vagrant: {
-  # version: 1.6.5, # Or 'latest'
-  version: latest,
+  version: latest, # 1.6.5 or latest
   latest: {
     command: "curl -s 'https://dl.bintray.com/mitchellh/vagrant/' | grep vagrant | grep '.deb' | tail -1 | cut -d_ -f5",
     pattern: '^\d+\.\d+\.\d+$'
